--- a/hort_parts/templates/hort_parts/index.html
+++ b/hort_parts/templates/hort_parts/index.html
@@ -477,11 +477,10 @@
                 <h3 class="animate-this">About US</h3>
 
                 <p class="lead animate-this"><span>Trademark HORT</span>, founded by the German company
-                    M-Tech Autoteile GmbH, appeared on the market of
-                    auto components in 2009, introducing cooling pumps for passenger cars.
+                    M-Tech Autoteile GmbH, appeared on the market of auto components in 2009, introducing cooling
+                    pumps for passenger cars.
                     At present <span>TM HORT</span> offers to motorists and service specialists a significant list of
-                    spare parts,
-                    which include:</p>
+                    spare parts, which include:</p>
                 <ul>
                     <li>Shock absorbers</li>
                     <li>Clutch elements</li>
@@ -498,14 +497,12 @@
                 </ul>
                 <p class="lead animate-this">
                     <span>TM HORT</span> in the production of products uses the latest automated control systems for
-                    quality
-                    control and shipment of products in accordance with the requirements of ISO / TS 16949, which allows
-                    you to track all the stages of planning, preparation and operation of production, tooling, finished
-                    products.
+                    quality control and shipment of products in accordance with the requirements of ISO / TS 16949,
+                    which allows you to track all the stages of planning, preparation and operation of production,
+                    tooling, finished products.
                     <br>
                     This approach makes it possible to ensure the quality of <span>TM HORT</span> products and assume
-                    warranty
-                    obligations to the consumer for at least 12 months of their operation.
+                    warranty obligations to the consumer for at least 12 months of their operation.
                     <span>TM HORT</span> makes maximum efforts to promote quality auto components to the secondary
                     market.
                 </p>
