--- a/hort_parts/static/css/base.css
+++ b/hort_parts/static/css/base.css
@@ -773,3 +773,68 @@ textarea {
   margin-right: auto;
   text-align: center;
 }
+
+.row-no-gutter {
+    margin-left: 0px;
+    margin-right: 0px;
+}
+
+.row-no-gutter [class*="col-"] {
+    padding-left: 0px;
+    padding-right: 0px;
+}
+
+.border-bottom {
+    border-bottom: 1px solid #ffffff;
+}
+
+.border-bottom-variant-1 {
+    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+}
+
+@media (min-width: 992px) {
+    * + .resp-tabs-container {
+        margin-top: 80px;
+    }
+}
+
+.resp-tab-content {
+    display: none;
+}
+
+.resp-tab-content-active {
+    display: block;
+}
+
+.gallery-skin {
+    position: relative;
+    overflow: hidden;
+}
+
+@media (min-width: 992px) {
+    .gallery-skin {
+        max-height: none;
+        overflow: visible;
+    }
+}
+
+.gallery_overlay {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    z-index: 2;
+    pointer-events: none;
+    -webkit-transform: translateX(-50%) translateY(-50%);
+    -ms-transform: translateX(-50%) translateY(-50%);
+    transform: translateX(-50%) translateY(-50%);
+}
+
+.gallery_overlay span {
+    -webkit-transition: .3s;
+    transition: .3s;
+}
+
+.gallery p {
+    color: #ffffff;
+}
+
