--- a/hort_parts/templates/hort_parts/index.html
+++ b/hort_parts/templates/hort_parts/index.html
@@ -223,6 +223,13 @@
                                 </div>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row row-no-gutter">
+                <div class="resp-tabs" style="display: block; width: 100%;">
+                    <div class="resp-tabs-container">
 
                         <div class="gallery resp-tab-content resp-tab-content-active" aria-labelledby="tab_item-0"
                              style="display:block">
@@ -333,6 +340,15 @@
                                 </div>
                             </div>
                         </div>
+
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="row row-no-gutter">
+                <div class="resp-tabs" style="display: block; width: 100%;">
+                    <div class="resp-tabs-container">
 
                         <div class="gallery resp-tab-content resp-tab-content-active" aria-labelledby="tab_item-0"
                              style="display:block">
@@ -446,10 +462,8 @@
                     </div>
                 </div>
             </div>
-
         </div>
     </div>
-
 </section>
 
 <section id="about">
