--- a/hort_parts/templates/hort_parts/main.html
+++ b/hort_parts/templates/hort_parts/main.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
     <link rel="stylesheet" href="{% static 'css/vendor.css' %}">
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
+    <link rel="stylesheet" href="{% static 'css/grid.css' %}">
 
 </head>
 
