--- a/hort_parts/templates/hort_parts/index.html
+++ b/hort_parts/templates/hort_parts/index.html
@@ -651,10 +651,10 @@
             <div id="folio-wrap" class="bricks-wrapper">
 
                 <div class="brick folio-item">
-                    <div class="item-wrap animate-this" data-src="images/portfolio/gallery/g-shutterbug.jpg"
+                    <div class="item-wrap animate-this" data-src="{% static 'images/portfolio/gallery/g-shutterbug.jpg' %}"
                          data-sub-html="#01">
                         <a href="#" class="overlay">
-                            <img src="images/portfolio/shutterbug.jpg" alt="Skaterboy">
+                            <img src="{% static 'images/portfolio/shutterbug.jpg' %}" alt="Skaterboy">
                             <div class="item-text">
 	                     	<span class="folio-types">
 		     					      Web Development
@@ -675,10 +675,10 @@
                 </div>
 
                 <div class="brick folio-item">
-                    <div class="item-wrap animate-this" data-src="images/portfolio/gallery/g-yellowwall.jpg"
+                    <div class="item-wrap animate-this" data-src="{% static 'images/portfolio/gallery/g-yellowwall.jpg' %}"
                          data-sub-html="#02">
                         <a href="#" class="overlay">
-                            <img src="images/portfolio/yellowwall.jpg" alt="Shutterbug">
+                            <img src="{% static 'images/portfolio/yellowwall.jpg' %}" alt="Shutterbug">
                             <div class="item-text">
 	                     	<span class="folio-types">
 		     					      Marketing
@@ -699,10 +699,10 @@
                 </div>
 
                 <div class="brick folio-item">
-                    <div class="item-wrap animate-this" data-src="images/portfolio/gallery/g-architecture.jpg"
+                    <div class="item-wrap animate-this" data-src="{% static 'images/portfolio/gallery/g-architecture.jpg' %}"
                          data-sub-html="#03">
                         <a href="#" class="overlay">
-                            <img src="images/portfolio/architecture.jpg" alt="Explore">
+                            <img src="{% static 'images/portfolio/architecture.jpg' %}" alt="Explore">
                             <div class="item-text">
 		     					   <span class="folio-types">
 		     					      Web Design
@@ -723,10 +723,10 @@
                 </div>
 
                 <div class="brick folio-item">
-                    <div class="item-wrap animate-this" data-src="images/portfolio/gallery/g-minimalismo.jpg"
+                    <div class="item-wrap animate-this" data-src="{% static 'images/portfolio/gallery/g-minimalismo.jpg' %}"
                          data-sub-html="#04">
                         <a href="#" class="overlay">
-                            <img src="images/portfolio/minimalismo.jpg" alt="Minimalismo">
+                            <img src="{% static 'images/portfolio/minimalismo.jpg' %}" alt="Minimalismo">
                             <div class="item-text">
 		     					   <span class="folio-types">
 		     					      Web Design
@@ -748,10 +748,10 @@
                 </div>
 
                 <div class="brick folio-item">
-                    <div class="item-wrap animate-this" data-src="images/portfolio/gallery/g-skaterboy.jpg"
+                    <div class="item-wrap animate-this" data-src="{% static 'images/portfolio/gallery/g-skaterboy.jpg' %}"
                          data-sub-html="#05">
                         <a href="#" class="overlay">
-                            <img src="images/portfolio/skaterboy.jpg" alt="Bicycle">
+                            <img src="{% static 'images/portfolio/skaterboy.jpg' %}" alt="Bicycle">
                             <div class="item-text">
 		     					   <span class="folio-types">
 		     					      Branding
@@ -772,10 +772,10 @@
                 </div>
 
                 <div class="brick folio-item">
-                    <div class="item-wrap animate-this" data-src="images/portfolio/gallery/g-salad.jpg"
+                    <div class="item-wrap animate-this" data-src="{% static 'images/portfolio/gallery/g-salad.jpg' %}"
                          data-sub-html="#06">
                         <a href="#" class="overlay">
-                            <img src="images/portfolio/salad.jpg" alt="Salad">
+                            <img src="{% static 'images/portfolio/salad.jpg' %}" alt="Salad">
                             <div class="item-text">
 		     					   <span class="folio-types">
 		     					      Branding
@@ -824,7 +824,7 @@
                     </p>
 
                     <div class="testimonial-author">
-                        <img src="images/avatars/user-02.jpg" alt="Author image">
+                        <img src="{% static 'images/avatars/user-02.jpg' %}" alt="Author image">
                         <div class="author-info">
                             Steve Jobs
                             <span class="position">CEO, Apple.</span>
@@ -840,7 +840,7 @@
                     </p>
 
                     <div class="testimonial-author">
-                        <img src="images/avatars/user-03.jpg" alt="Author image">
+                        <img src="{% static 'images/avatars/user-03.jpg' %}" alt="Author image">
                         <div class="author-info">
                             John Doe
                             <span>CEO, ABC Corp.</span>
@@ -862,17 +862,17 @@
         <div class="col-twelve">
 
             <div class="client-lists owl-carousel">
-                <div><img src="images/clients/mozilla.png" alt=""></div>
-                <div><img src="images/clients/bower.png" alt=""></div>
-                <div><img src="images/clients/codepen.png" alt=""></div>
-                <div><img src="images/clients/envato.png" alt=""></div>
-                <div><img src="images/clients/firefox.png" alt=""></div>
-                <div><img src="images/clients/grunt.png" alt=""></div>
-                <div><img src="images/clients/evernote.png" alt=""></div>
-                <div><img src="images/clients/github.png" alt=""></div>
-                <div><img src="images/clients/joomla.png" alt=""></div>
-                <div><img src="images/clients/jQuery.png" alt=""></div>
-                <div><img src="images/clients/wordpress.png" alt=""></div>
+                <div><img src="{% static 'images/clients/mozilla.png' %}" alt=""></div>
+                <div><img src="{% static 'images/clients/bower.png' %}" alt=""></div>
+                <div><img src="{% static 'images/clients/codepen.png' %}" alt=""></div>
+                <div><img src="{% static 'images/clients/envato.png' %}" alt=""></div>
+                <div><img src="{% static 'images/clients/firefox.png' %}" alt=""></div>
+                <div><img src="{% static 'images/clients/grunt.png' %}" alt=""></div>
+                <div><img src="{% static 'images/clients/evernote.png' %}" alt=""></div>
+                <div><img src="{% static 'images/clients/github.png' %}" alt=""></div>
+                <div><img src="{% static 'images/clients/joomla.png' %}" alt=""></div>
+                <div><img src="{% static 'images/clients/jQuery.png' %}" alt=""></div>
+                <div><img src="{% static 'images/clients/wordpress.png' %}" alt=""></div>
             </div>
 
         </div>
