--- a/hort_parts/templates/hort_parts/index.html
+++ b/hort_parts/templates/hort_parts/index.html
@@ -9,7 +9,7 @@
 <header>
 
     <div class="header-logo">
-        <a href="index.html">Hort Parts</a>
+        <a href="#">Hort Parts</a>
     </div>
 
     <a id="header-menu-trigger" href="#0">
@@ -27,27 +27,31 @@
             <li class="current"><a class="smoothscroll" href="#home" title="">Home</a></li>
             <li><a class="smoothscroll" href="#products" title="">Products</a></li>
             <li><a class="smoothscroll" href="#about" title="">About</a></li>
-            <li><a class="smoothscroll" href="#portfolio" title="">Warranty</a></li>
-            <li><a class="smoothscroll" href="#services" title="">Download materials</a></li>
-            <li><a class="smoothscroll" href="#portfolio" title="">News</a></li>
+            <li><a class="smoothscroll" href="#warranty" title="">Warranty</a></li>
+            <li><a class="smoothscroll" href="#download" title="">Download materials</a></li>
+            <li><a class="smoothscroll" href="#news" title="">News</a></li>
             <li><a class="smoothscroll" href="#contact" title="">Contact</a></li>
         </ul>
 
         <ul class="header-social-list">
             <li>
-                <a href="#"><i class="fa fa-facebook-square"></i></a>
-            </li>
-            <li>
-                <a href="#"><i class="fa fa-twitter"></i></a>
+                <a href="https://twitter.com/Hort_Parts" target="_blank"><i class="fa fa-twitter"></i></a>
             </li>
             <li>
                 <a href="https://www.instagram.com/hortparts/" target="_blank"><i class="fa fa-instagram"></i></a>
             </li>
+            <hr/>
             <li>
-                <a href="#"><i class="fa fa-behance"></i></a>
+                <a href="#" target="_blank"><span class="flag-icon flag-icon-ua"></span></a>
             </li>
             <li>
-                <a href="#"><i class="fa fa-dribbble"></i></a>
+                <a href="#" target="_blank"><span class="flag-icon flag-icon-gb"></span></a>
+            </li>
+            <li>
+                <a href="#" target="_blank"><span class="flag-icon flag-icon-ru"></span></a>
+            </li>
+            <li>
+                <a href="#" target="_blank"><span class="flag-icon flag-icon-de"></span></a>
             </li>
         </ul>
 
@@ -77,16 +81,22 @@
 
     <ul class="home-social-list">
         <li class="animate-intro">
-            <a href="#"><i class="fa fa-twitter"></i></a>
+            <a href="https://twitter.com/Hort_Parts"><i class="fa fa-twitter"></i></a>
         </li>
         <li class="animate-intro">
             <a href="https://www.instagram.com/hortparts/" target="_blank"><i class="fa fa-instagram"></i></a>
         </li>
         <li class="animate-intro">
-            <a href="#"><i class="fa fa-behance"></i></a>
+            <a href="#" target="_blank"><span class="flag-icon flag-icon-ua"></span></a>
         </li>
         <li class="animate-intro">
-            <a href="#"><i class="fa fa-dribbble"></i></a>
+            <a href="#" target="_blank"><span class="flag-icon flag-icon-gb"></span></a>
+        </li>
+        <li class="animate-intro">
+            <a href="#" target="_blank"><span class="flag-icon flag-icon-ru"></span></a>
+        </li>
+        <li class="animate-intro">
+            <a href="#" target="_blank"><span class="flag-icon flag-icon-de"></span></a>
         </li>
     </ul>
 
@@ -481,7 +491,7 @@
                     pumps for passenger cars.
                     At present <span>TM HORT</span> offers to motorists and service specialists a significant list of
                     spare parts, which include:</p>
-                <ul>
+                <ul class="animate-this">
                     <li>Shock absorbers</li>
                     <li>Clutch elements</li>
                     <li>Brake pads and cylinders</li>
@@ -513,7 +523,7 @@
 
 </section>
 
-<section id="services">
+<section id="warranty">
 
     <div class="overlay"></div>
     <div class="gradient-overlay"></div>
@@ -629,7 +639,7 @@
 
 </section>
 
-<section id="portfolio">
+<section id="download">
 
     <div class="intro-wrap">
 
@@ -646,162 +656,9 @@
 
     </div>
 
-    <div class="row portfolio-content">
-        <div class="col-twelve">
-            <div id="folio-wrap" class="bricks-wrapper">
-
-                <div class="brick folio-item">
-                    <div class="item-wrap animate-this" data-src="{% static 'images/portfolio/gallery/g-shutterbug.jpg' %}"
-                         data-sub-html="#01">
-                        <a href="#" class="overlay">
-                            <img src="{% static 'images/portfolio/shutterbug.jpg' %}" alt="Skaterboy">
-                            <div class="item-text">
-	                     	<span class="folio-types">
-		     					      Web Development
-		     					   </span>
-                                <h3 class="folio-title">Shutterbug</h3>
-                            </div>
-                        </a>
-                        <a href="#" class='details-link' title="details">
-                            <i class="icon-link"></i>
-                        </a>
-                    </div>
-
-                    <div id="01" class='hide'>
-                        <h4>Shutterbug</h4>
-                        <p>Lorem ipsum Dolor deserunt labore sint officia. Magna et aute enim proident tempor sunt quis
-                            nulla voluptate fugiat velit. <a href="#">Details</a></p>
-                    </div>
-                </div>
-
-                <div class="brick folio-item">
-                    <div class="item-wrap animate-this" data-src="{% static 'images/portfolio/gallery/g-yellowwall.jpg' %}"
-                         data-sub-html="#02">
-                        <a href="#" class="overlay">
-                            <img src="{% static 'images/portfolio/yellowwall.jpg' %}" alt="Shutterbug">
-                            <div class="item-text">
-	                     	<span class="folio-types">
-		     					      Marketing
-		     					   </span>
-                                <h3 class="folio-title">Yellow Wall</h3>
-                            </div>
-                        </a>
-                        <a href="#" class='details-link' title="details">
-                            <i class="icon-link"></i>
-                        </a>
-                    </div>
-
-                    <div id="02" class='hide'>
-                        <h4>Yellow Wall</h4>
-                        <p>Lorem ipsum Dolor deserunt labore sint officia. Magna et aute enim proident tempor sunt quis
-                            nulla voluptate fugiat velit. <a href="#">Details</a></p>
-                    </div>
-                </div>
-
-                <div class="brick folio-item">
-                    <div class="item-wrap animate-this" data-src="{% static 'images/portfolio/gallery/g-architecture.jpg' %}"
-                         data-sub-html="#03">
-                        <a href="#" class="overlay">
-                            <img src="{% static 'images/portfolio/architecture.jpg' %}" alt="Explore">
-                            <div class="item-text">
-		     					   <span class="folio-types">
-		     					      Web Design
-		     					   </span>
-                                <h3 class="folio-title">Architecture</h3>
-                            </div>
-                        </a>
-                        <a href="#" class='details-link' title="details">
-                            <i class="icon-link"></i>
-                        </a>
-                    </div>
-
-                    <div id="03" class='hide'>
-                        <h4>Architecture</h4>
-                        <p>Lorem ipsum Dolor deserunt labore sint officia. Magna et aute enim proident tempor sunt quis
-                            nulla voluptate fugiat velit. <a href="#">Details</a></p>
-                    </div>
-                </div>
-
-                <div class="brick folio-item">
-                    <div class="item-wrap animate-this" data-src="{% static 'images/portfolio/gallery/g-minimalismo.jpg' %}"
-                         data-sub-html="#04">
-                        <a href="#" class="overlay">
-                            <img src="{% static 'images/portfolio/minimalismo.jpg' %}" alt="Minimalismo">
-                            <div class="item-text">
-		     					   <span class="folio-types">
-		     					      Web Design
-		     					   </span>
-                                <h3 class="folio-title">Minimalismo</h3>
-                            </div>
-                        </a>
-                        <a href="#" class='details-link' title="details">
-                            <i class="icon-link"></i>
-                        </a>
-                    </div>
-
-                    <div id="04" class='hide'>
-                        <h4>Minimalismo</h4>
-                        <p>Lorem ipsum Dolor deserunt labore sint officia. Magna et aute enim proident tempor sunt quis
-                            nulla voluptate fugiat velit.
-                        </p>
-                    </div>
-                </div>
-
-                <div class="brick folio-item">
-                    <div class="item-wrap animate-this" data-src="{% static 'images/portfolio/gallery/g-skaterboy.jpg' %}"
-                         data-sub-html="#05">
-                        <a href="#" class="overlay">
-                            <img src="{% static 'images/portfolio/skaterboy.jpg' %}" alt="Bicycle">
-                            <div class="item-text">
-		     					   <span class="folio-types">
-		     					      Branding
-		     					   </span>
-                                <h3 class="folio-title">Skaterboy</h3>
-                            </div>
-                        </a>
-                        <a href="#" class='details-link' title="details">
-                            <i class="icon-link"></i>
-                        </a>
-                    </div>
-
-                    <div id="05" class='hide'>
-                        <h4>Skaterboy</h4>
-                        <p>Lorem ipsum Dolor deserunt labore sint officia. Magna et aute enim proident tempor sunt quis
-                            nulla voluptate fugiat velit. <a href="#">Details</a></p>
-                    </div>
-                </div>
-
-                <div class="brick folio-item">
-                    <div class="item-wrap animate-this" data-src="{% static 'images/portfolio/gallery/g-salad.jpg' %}"
-                         data-sub-html="#06">
-                        <a href="#" class="overlay">
-                            <img src="{% static 'images/portfolio/salad.jpg' %}" alt="Salad">
-                            <div class="item-text">
-		     					   <span class="folio-types">
-		     					      Branding
-		     					   </span>
-                                <h3 class="folio-title">Salad</h3>
-                            </div>
-                        </a>
-                        <a href="#" class='details-link' title="details">
-                            <i class="icon-link"></i>
-                        </a>
-                    </div>
-
-                    <div id="06" class='hide'>
-                        <h4>Salad</h4>
-                        <p>Lorem ipsum Dolor deserunt labore sint officia. Magna et aute enim proident tempor sunt quis
-                            nulla voluptate fugiat velit. <a href="#">Details</a></p>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-    </div>
-
 </section>
 
-<section id="testimonials">
+<section id="news">
 
     <div class="row">
         <div class="col-twelve">
@@ -856,30 +713,6 @@
 
 </section>
 
-<section id="clients">
-
-    <div class="row animate-this">
-        <div class="col-twelve">
-
-            <div class="client-lists owl-carousel">
-                <div><img src="{% static 'images/clients/mozilla.png' %}" alt=""></div>
-                <div><img src="{% static 'images/clients/bower.png' %}" alt=""></div>
-                <div><img src="{% static 'images/clients/codepen.png' %}" alt=""></div>
-                <div><img src="{% static 'images/clients/envato.png' %}" alt=""></div>
-                <div><img src="{% static 'images/clients/firefox.png' %}" alt=""></div>
-                <div><img src="{% static 'images/clients/grunt.png' %}" alt=""></div>
-                <div><img src="{% static 'images/clients/evernote.png' %}" alt=""></div>
-                <div><img src="{% static 'images/clients/github.png' %}" alt=""></div>
-                <div><img src="{% static 'images/clients/joomla.png' %}" alt=""></div>
-                <div><img src="{% static 'images/clients/jQuery.png' %}" alt=""></div>
-                <div><img src="{% static 'images/clients/wordpress.png' %}" alt=""></div>
-            </div>
-
-        </div>
-    </div>
-
-</section>
-
 <section id="contact">
 
     <div class="overlay"></div>
@@ -887,11 +720,8 @@
     <div class="row narrow section-intro with-bottom-sep animate-this">
         <div class="col-twelve">
             <h3>Contact</h3>
-            <h1>Get In Touch.</h1>
-
-            <p class="lead">Quisque velit nisi, pretium ut lacinia in, elementum id enim. Curabitur arcu erat, accumsan
-                id imperdiet et, porttitor at sem. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent
-                sapien massa, convallis a pellentesque nec, egestas non nisi.</p>
+            <p class="lead">If you have any business queries or other questions, please fill out the following form to
+                contact us. Thank you.</p>
         </div>
     </div>
 
@@ -955,31 +785,13 @@
             <h5>Contact Information</h5>
 
             <div class="cinfo">
-                <h6>Where to Find Us</h6>
-                <p>
-                    1600 Amphitheatre Parkway<br>
-                    Mountain View, CA<br>
-                    94043 US
-                </p>
-            </div>
-
-            <div class="cinfo">
                 <h6>Email Us At</h6>
                 <p>
-                    someone@infinitysite.com<br>
-                    info@infinitysite.com
+                    office@hort.parts<br>
+                    office@hort.ua<br>
+                    hortautoparts@gmail.com
                 </p>
             </div>
-
-            <div class="cinfo">
-                <h6>Call Us At</h6>
-                <p>
-                    Phone: (+63) 555 1212<br>
-                    Mobile: (+63) 555 0100<br>
-                    Fax: (+63) 555 0101
-                </p>
-            </div>
-
         </div>
 
     </div>
