--- a/hort_parts/static/css/main.css
+++ b/hort_parts/static/css/main.css
@@ -16,7 +16,7 @@
  *  09. header styles
  *  10. home
  *  11. about
- *  12. services
+ *  12. warranty
  *  13. portfolio
  *  14. testimonials
  *  15. clients
@@ -1995,10 +1995,10 @@ html[data-useragent*='MSIE 10.0'] .scrolldown,
 }
 
 /* ===================================================================
- *  12. services - (_layout.scss)
+ *  12. warranty - (_layout.scss)
  *
  * ------------------------------------------------------------------- */
-#services {
+#warranty {
   background-color: #19191b;
   background-image: url(../images/services-bg.jpg);
   background-repeat: no-repeat;
@@ -2011,7 +2011,7 @@ html[data-useragent*='MSIE 10.0'] .scrolldown,
   padding: 15rem 0 15rem;
   color: rgba(255, 255, 255, 0.3);
 }
-#services .overlay {
+#warranty .overlay {
   position: absolute;
   top: 0;
   left: 0;
@@ -2019,7 +2019,7 @@ html[data-useragent*='MSIE 10.0'] .scrolldown,
   height: 100%;
   background-color: rgba(5, 5, 5, 0.7);
 }
-#services .gradient-overlay {
+#warranty .gradient-overlay {
   position: absolute;
   top: 0;
   left: 0;
@@ -2031,39 +2031,39 @@ html[data-useragent*='MSIE 10.0'] .scrolldown,
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0.85) 0%, transparent 100%);
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d9000000', endColorstr='#00000000',GradientType=0 );
 }
-#services .section-intro h3 {
+#warranty .section-intro h3 {
   color: rgba(242, 242, 242, 0.5);
 }
-#services .section-intro h1 {
+#warranty .section-intro h1 {
   color: #FFFFFF;
 }
-#services .section-intro .lead {
+#warranty .section-intro .lead {
   color: rgba(242, 242, 242, 0.4);
 }
-#services .services-content {
+#warranty .services-content {
   text-align: center;
   max-width: 1040px;
 }
-#services .services-list {
+#warranty .services-list {
   margin-top: 1.2rem;
   text-align: center;
 }
-#services .services-list .service-item {
+#warranty .services-list .service-item {
   margin-bottom: 3rem;
   padding: 0 50px;
 }
-#services .services-list .service-item p {
+#warranty .services-list .service-item p {
   color: rgba(242, 242, 242, 0.5);
 }
-#services .services-list .icon {
+#warranty .services-list .icon {
   display: inline-block;
   margin-bottom: 1.5rem;
 }
-#services .services-list .icon i {
+#warranty .services-list .icon i {
   font-size: 5.4rem;
   color: #f9a828;
 }
-#services .services-list .h05 {
+#warranty .services-list .h05 {
   font-size: 1.7rem;
   line-height: 1.765;
   color: #FFFFFF;
@@ -2075,39 +2075,39 @@ html[data-useragent*='MSIE 10.0'] .scrolldown,
  * services
  * ------------------------------------------------------------------- */
 @media only screen and (max-width: 1024px) {
-  #services .services-list .service-item {
+  #warranty .services-list .service-item {
     padding: 0 40px;
   }
 }
 @media only screen and (max-width: 900px) {
-  #services .services-list .service-item {
+  #warranty .services-list .service-item {
     padding: 0 30px;
   }
 }
 @media only screen and (max-width: 768px) {
-  #services {
+  #warranty {
     padding: 12rem 0 12rem;
   }
-  #services .services-content {
+  #warranty .services-content {
     max-width: 550px;
   }
-  #services .services-list .service-item {
+  #warranty .services-list .service-item {
     padding: 0 15px;
   }
-  #services .services-list .icon i {
+  #warranty .services-list .icon i {
     font-size: 5.1rem;
   }
 }
 @media only screen and (max-width: 600px) {
-  #services .services-list .service-item {
+  #warranty .services-list .service-item {
     padding: 0 10px;
   }
-  #services .services-list .icon i {
+  #warranty .services-list .icon i {
     font-size: 5rem;
   }
 }
 @media only screen and (max-width: 400px) {
-  #services .services-list .service-item {
+  #warranty .services-list .service-item {
     padding: 0;
   }
 }
