--- a/hort_parts/templates/hort_parts/include/footer.html
+++ b/hort_parts/templates/hort_parts/include/footer.html
@@ -6,14 +6,37 @@
 
         <div class="row">
 
-            <div class="col-five tab-full footer-about">
+            <div class="col-three tab-full footer-social">
 
-                <h4 class="h05">Infinity.</h4>
+                <h4 class="h05">Hort.</h4>
 
-                <p>Proin eget tortor risus. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Praesent sapien
-                    massa, convallis a pellentesque nec, egestas non nisi. Mauris blandit aliquet elit, eget tincidunt
-                    nibh pulvinar a. Nulla porttitor accumsan tincidunt. Nulla porttitor accumsan tincidunt. Proin eget
-                    tortor risus.</p>
+                <ul class="list-links">
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Instagram</a></li>
+                </ul>
+
+            </div>
+
+            <div class="col-three tab-full footer-social">
+
+                <h4 class="h05">Hort.</h4>
+
+                <ul class="list-links">
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Instagram</a></li>
+                </ul>
+
+            </div>
+
+
+            <div class="col-three tab-full footer-social">
+
+                <h4 class="h05">Site.</h4>
+
+                <ul class="list-links">
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Instagram</a></li>
+                </ul>
 
             </div>
 
@@ -22,36 +45,9 @@
                 <h4 class="h05">Follow Us.</h4>
 
                 <ul class="list-links">
-                    <li><a href="#">Facebook</a></li>
-                    <li><a href="#">Twitter</a></li>
-                    <li><a href="#">Instagram</a></li>
-                    <li><a href="#">Behance</a></li>
-                    <li><a href="#">Dribble</a></li>
+                    <li><a href="https://twitter.com/Hort_Parts" target="_blank">Twitter</a></li>
+                    <li><a href="https://www.instagram.com/hortparts/" target="_blank">Instagram</a></li>
                 </ul>
-
-            </div>
-
-            <div class="col-four tab-full footer-subscribe end">
-
-                <h4 class="h05">Get Notified.</h4>
-
-                <p>Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Praesent sapien massa.</p>
-
-                <div class="subscribe-form">
-
-                    <form id="mc-form" class="group" novalidate="true">
-
-                        <input type="email" value="" name="dEmail" class="email" id="mc-email" placeholder="type email"
-                               required="">
-
-                        <!-- <input type="submit" name="subscribe" > -->
-                        <button><i class="icon-mail"></i></button>
-
-                        <label for="mc-email" class="subscribe-message"></label>
-
-                    </form>
-
-                </div>
 
             </div>
 
