--- a/hort_parts/templates/hort_parts/main.html
+++ b/hort_parts/templates/hort_parts/main.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="{% static 'css/vendor.css' %}">
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
     <link rel="stylesheet" href="{% static 'css/grid.css' %}">
+    <link rel="stylesheet" href="{% static 'css/flag-icon.css' %}">
 
 </head>
 
