--- a/hort_parts/static/css/main.css
+++ b/hort_parts/static/css/main.css
@@ -18,7 +18,7 @@
  *  11. about
  *  12. warranty
  *  13. portfolio
- *  14. testimonials
+ *  14. news
  *  15. clients
  *  16. contact
  *  17. footer
@@ -2116,43 +2116,43 @@ html[data-useragent*='MSIE 10.0'] .scrolldown,
  *  13. portfolio - (_layout.scss)
  *
  * ------------------------------------------------------------------- */
-#portfolio {
+#download {
   background: #FFFFFF;
   min-height: 800px;
   position: relative;
   padding: 0;
 }
-#portfolio .intro-wrap {
+#download .intro-wrap {
   padding: 15rem 0 21rem;
   background: #111111;
 }
-#portfolio .section-intro h3 {
+#download .section-intro h3 {
   color: rgba(242, 242, 242, 0.5);
 }
-#portfolio .section-intro h1 {
+#download .section-intro h1 {
   color: #FFFFFF;
 }
-#portfolio .section-intro .lead {
+#download .section-intro .lead {
   color: rgba(242, 242, 242, 0.4);
 }
-#portfolio .portfolio-content {
+#download .portfolio-content {
   margin-top: -22.2rem;
 }
-#portfolio .bricks-wrapper:before, 
-#portfolio .bricks-wrapper:after {
+#download .bricks-wrapper:before,
+#download .bricks-wrapper:after {
   content: "";
   display: table;
 }
-#portfolio .bricks-wrapper:after {
+#download .bricks-wrapper:after {
   clear: both;
 }
-#portfolio .bricks-wrapper .brick {
+#download .bricks-wrapper .brick {
   float: left;
   width: 50%;
   padding: 0;
   margin: 0;
 }
-#portfolio .bricks-wrapper .brick:nth-child(2n+1) {
+#download .bricks-wrapper .brick:nth-child(2n+1) {
   clear: both;
 }
 
@@ -2355,12 +2355,12 @@ html[data-useragent*='MSIE 10.0'] .scrolldown,
  * portfolio
  * ------------------------------------------------------------------- */
 @media only screen and (max-width: 768px) {
-  #portfolio .intro-wrap {
+  #download .intro-wrap {
     padding: 12rem 0 21rem;
   }
 }
 @media only screen and (max-width: 600px) {
-  #portfolio .bricks-wrapper .brick {
+  #download .bricks-wrapper .brick {
     float: none;
     width: 100%;
   }
@@ -2373,15 +2373,15 @@ html[data-useragent*='MSIE 10.0'] .scrolldown,
 
 
 /* ===================================================================
- *  14. testimonials - (_layout.scss)
+ *  14. news - (_layout.scss)
  *
  * ------------------------------------------------------------------- */
-#testimonials {
+#news {
   background: #FFFFFF;
   padding: 12rem 0 7.8rem;
   text-align: center;
 }
-#testimonials h2 {
+#news h2 {
   font-family: "montserrat-bold", sans-serif;
   font-size: 1.8rem;
   line-height: 1.667;
@@ -2392,7 +2392,7 @@ html[data-useragent*='MSIE 10.0'] .scrolldown,
   margin-bottom: 4.2rem;
 }
 
-#testimonials .flex-container {
+#news .flex-container {
   width: 80%;
   max-width: 900px;
   margin: 0 auto;
@@ -2456,20 +2456,20 @@ html[data-useragent*='MSIE 10.0'] .scrolldown,
 }
 
 /* control nav */
-#testimonials .flex-control-nav {
+#news .flex-control-nav {
   width: 100%;
   text-align: center;
   display: block;
   position: absolute;
   bottom: -1.5rem;
 }
-#testimonials .flex-control-nav li {
+#news .flex-control-nav li {
   margin: 0 6px;
   display: inline-block;
   zoom: 1;
 }
 
-#testimonials .flex-control-paging li a {
+#news .flex-control-paging li a {
   width: 9px;
   height: 9px;
   background-color: #959595;
@@ -2480,10 +2480,10 @@ html[data-useragent*='MSIE 10.0'] .scrolldown,
   text-shadow: none;
   color: transparent;
 }
-#testimonials .flex-control-paging li a:hover {
+#news .flex-control-paging li a:hover {
   background-color: #555555;
 }
-#testimonials .flex-control-paging li a.flex-active {
+#news .flex-control-paging li a.flex-active {
   background-color: #000000;
 }
 
@@ -2497,7 +2497,7 @@ html[data-useragent*='MSIE 10.0'] .scrolldown,
   }
 }
 @media only screen and (max-width: 768px) {
-  #testimonials h2 {
+  #news h2 {
     font-size: 1.7rem;
   }
 
@@ -2516,7 +2516,7 @@ html[data-useragent*='MSIE 10.0'] .scrolldown,
   }
 }
 @media only screen and (max-width: 600px) {
-  #testimonials .flex-container {
+  #news .flex-container {
     width: 90%;
   }
 
@@ -2525,12 +2525,12 @@ html[data-useragent*='MSIE 10.0'] .scrolldown,
   }
 }
 @media only screen and (max-width: 500px) {
-  #testimonials h2 {
+  #news h2 {
     font-size: 1.5rem;
   }
 }
 @media only screen and (max-width: 400px) {
-  #testimonials .flex-container {
+  #news .flex-container {
     width: 100%;
   }
 
