--- a/hort_parts/templates/hort_parts/index.html
+++ b/hort_parts/templates/hort_parts/index.html
@@ -131,14 +131,14 @@
 
                                 <div class="gallery-skin border-bottom">
                                     <a class="thumb"
-                                       href="#/images/page-1_image01_original.jpg"
+                                       href="shockabsorber/"
                                        data-gallery="5">
-                                        <img src="{% static 'images/page-1_image01.jpg' %}" alt="">
+                                        <img src="{% static 'images/catalog/absorber2.png' %}" alt="">
                                         <span class="thumb_overlay"></span>
                                         <div class="gallery_overlay">
                                             <p class="brand_name heading-3"><span>Hort</span></p>
-                                            <p class="light brand_name"><span>BRABUS Mercedes S-65 <br class="br-lg-on">
-                                                ROCKET-900 2015</span>
+                                            <p class="light brand_name">
+                                                <span>Shock absorbers</span>
                                             </p>
                                         </div>
                                     </a>
